// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders correctly 1`] = `
<div>
  <input
    className="input"
    defaultValue=""
    id=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    style={Object {}}
    type="text"
  />
  <p
    className="infoText"
  />
</div>
`;

exports[`TextInput when error prop is true renders correctly 1`] = `
<div>
  <input
    className="input error"
    defaultValue=""
    id=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    style={Object {}}
    type="text"
  />
  <p
    className="infoText error"
  />
</div>
`;

exports[`TextInput when idForLabel prop is passed in renders correctly 1`] = `
<div>
  <input
    className="input"
    defaultValue=""
    id="exampleID"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    style={Object {}}
    type="text"
  />
  <p
    className="infoText"
  />
</div>
`;

exports[`TextInput when infoText prop is passed in renders correctly 1`] = `
<div>
  <input
    className="input"
    defaultValue=""
    id=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    style={Object {}}
    type="text"
  />
  <p
    className="infoText"
  >
    Example Text
  </p>
</div>
`;

exports[`TextInput when password prop is true renders correctly 1`] = `
<div>
  <input
    className="input"
    defaultValue=""
    id=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    style={Object {}}
    type="text"
  />
  <p
    className="infoText"
  />
</div>
`;

exports[`TextInput when placeholder prop is passed in renders correctly 1`] = `
<div>
  <input
    className="input"
    defaultValue=""
    id=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Example Text"
    style={Object {}}
    type="text"
  />
  <p
    className="infoText"
  />
</div>
`;

exports[`TextInput when value prop is passed in renders correctly 1`] = `
<div>
  <input
    className="input"
    defaultValue=""
    id=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    style={Object {}}
    type="text"
  />
  <p
    className="infoText"
  />
</div>
`;
